# berkie_reachy

./: .env.example  .gitattributes  .gitignore  README.md  index.html  pyproject.toml  sitecustomize.py
.github/workflows/: sync-hf-space.yml
docs/: berky_llm_engine_contract.md  local_llm_engine_dev_setup.md  movement_behavior_notes.md
scripts/: kokoro_client.py  kokoro_server.py  kokoro_tts.py
src/berkie_reachy/: berky_live.py  berky_reachy.py  config.py  console.py  diarization.py  gstreamer_env.py  llm_engine_socket.py  local_whisper.py  main.py  moves.py  openai_realtime.py  prompts.py  tts.py  utils.py
src/berkie_reachy/audio/: head_wobbler.py
src/berkie_reachy/diarization_bootstrap/: __init__.py  diarization_server.py
src/berkie_reachy/llm_engine_bootstrap/: __init__.py  chroma.py  cli.py  mongo.py  node.py  repo.py  seed.py  settings_ui.py  state.py
src/berkie_reachy/llm_engine_bootstrap/patches/: berky_tuning.patch
src/berkie_reachy/profiles/_berkie_reachy_locked_profile/: custom_tool.py  instructions.txt  sweep_look.py  tools.txt
src/berkie_reachy/static/: index.html  main.js  style.css
src/berkie_reachy/tools/: background_tool_manager.py  camera.py  core_tools.py  dance.py  do_nothing.py  head_tracking.py  move_head.py  play_emotion.py  stop_dance.py  stop_emotion.py  task_cancel.py  task_status.py
src/berkie_reachy/vision/: processors.py
tests/: test_berky_runtime_helpers.py  test_config_name_collisions.py  test_diarization_local.py  test_external_loading.py  test_openai_realtime.py
tests/audio/: test_head_wobbler.py
tests/tools/: test_background_tool_manager.py
tests/vision/: test_processors.py
