[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "berkie_reachy"
version = "0.3.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "aiortc>=1.13.0", "fastrtc>=0.0.34", "gradio==5.50.1.dev1", "huggingface-hub==1.3.0", "httpx>=0.28.0", "opencv-python>=4.12.0.88", "python-dotenv", "openai>=2.1", "python-socketio[client]>=5.11.0", "reachy_mini_dances_library", "reachy_mini_toolbox", "reachy-mini>=1.5.0", "eclipse-zenoh~=1.7.0", "gradio_client>=1.13.3",]
[[project.authors]]
name = "Pollen Robotics"
email = "contact@pollen-robotics.com"

[dependency-groups]
dev = [ "pytest", "pytest-asyncio", "ruff==0.12.0", "mypy==1.18.2", "pre-commit", "types-requests", "python-semantic-release>=10.5.3",]

[project.optional-dependencies]
local_vision = [ "torch>=2.1", "transformers==5.0.0rc2", "num2words",]
yolo_vision = [ "ultralytics", "supervision",]
mediapipe_vision = [ "mediapipe==0.10.14",]
all_vision = [ "torch>=2.1", "transformers==5.0.0rc2", "num2words", "ultralytics", "supervision", "mediapipe==0.10.14",]
berky_voice = [ "faster-whisper>=1.1.0",]
diarization = [ "pyannote.audio>=3.3.0", "soundfile>=0.12.1", "sounddevice>=0.4.6",]

[project.scripts]
berkie-reachy = "berkie_reachy.main:main"
berky-reachy = "berkie_reachy.berky_reachy:main"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 119
exclude = [ ".venv", "dist", "build", "**/__pycache__", "*.egg-info", ".mypy_cache", ".pytest_cache",]

[tool.mypy]
python_version = "3.12"
files = [ "src/",]
ignore_missing_imports = true
strict = true
show_error_codes = true
warn_unused_ignores = true

[project.entry-points.reachy_mini_apps]
berkie_reachy = "berkie_reachy.main:BerkieReachy"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
berkie_reachy = [ "images/*", "static/*", ".env.example", "demos/**/*.txt", "prompts_library/*.txt", "profiles/**/*.txt", "prompts/**/*.txt",]

[tool.ruff.lint]
select = [ "E", "F", "W", "I", "C4", "D",]
ignore = [ "E501", "D100", "D203", "D213",]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools.packages.find]
where = [ "src",]

[tool.ruff.lint.isort]
length-sort = true
lines-after-imports = 2
no-lines-before = [ "standard-library", "local-folder",]
known-local-folder = [ "berkie_reachy",]
known-first-party = [ "reachy_mini", "reachy_mini_dances_library", "reachy_mini_toolbox",]
split-on-trailing-comma = true
